Add additional colors for different purchase points

--- a/index.html
+++ b/index.html
@@ -804,6 +804,18 @@
                     '10%': { color: 'cyan', shape: 'diamond-open' },
                     '15%': { color: 'purple', shape: 'hexagon' },
                     '20%': { color: 'orange', shape: 'triangle-up' },
+                    '25%': { color: 'blue', shape: 'star' },
+                    '30%': { color: 'magenta', shape: 'triangle-down' },
+                    '35%': { color: 'brown', shape: 'square' },
+                    '40%': { color: 'yellow', shape: 'triangle-right' },
+                    '45%': { color: 'coral', shape: 'triangle-left' },
+                    '50%': { color: 'teal', shape: 'cross' },
+                    '55%': { color: 'olive', shape: 'x' },
+                    '60%': { color: 'lime', shape: 'octagon' },
+                    '65%': { color: 'indigo', shape: 'star-square' },
+                    '70%': { color: 'violet', shape: 'pentagon' },
+                    '75%': { color: 'gold', shape: 'hourglass' },
+                    '80%': { color: 'navy', shape: 'diamond' }
                 },
                 'sell': {
                     '5%': { color: 'red', shape: 'cross' },
