CSV download button fix

--- a/index.html
+++ b/index.html
@@ -180,24 +180,17 @@
             transform: translateX(20px);
         }
 
-        .input-group label {
-            display: flex;
-            align-items: center;
-            font-weight: bold;
-            gap: 10px; 
-            white-space: nowrap; 
-        }
-
         .input-group {
             margin-bottom: 20px;
         }
+        
 
     </style>
 </head>
 <body>
     <div class="header">
         <h1>Investment Strategy Comparison</h1>
-        <button id="downloadCSV" onclick="downloadCSV()">Download CSV</button>
+        <button id="downloadCSV" class="download-btn" onclick="downloadCSV()">Download CSV</button>
     </div>
 
     <!-- Main Content Area -->
