--- a/index.html
+++ b/index.html
@@ -497,6 +497,7 @@
 
             const buyPoints = [];
             const sellPoints = [];
+            const totalCashValues = []; // Array to store total cash values
 
             // Get the selected start and closing dates from the dropdowns
             const selectedStartDate = document.getElementById('dateRange').value;
@@ -526,7 +527,7 @@
             if (!filteredStockData.length || !filteredNDXStockData.length) {
                 console.error("No stock data available for the selected date range.");
                 finalTotalValueDisplay.textContent = 'No data';
-                updateChart([], [], []);
+                updateChart([], [], [], [], []); // Include totalCashValues in the updateChart call
                 return;
             }
 
@@ -681,6 +682,7 @@
                 const activeProfit = totalProfit + activeInvestments.reduce((sum, inv) => sum + inv.shares * price, 0);
 
                 totalPortfolioValues.push({ x: dataDate, y: totalValue });
+                totalCashValues.push({ x: dataDate, y: cash }); // Store the cash value for this date
 
                 // activeProfits.push({ x: dataDate, y: activeProfit });
                 // Log buy and sell points on the graph
@@ -764,7 +766,7 @@
                 };
             });
 
-            updateChart(totalPortfolioValues, activeProfits, ndxPortfolioValues, buyPoints, sellPoints);
+            updateChart(totalPortfolioValues, activeProfits, ndxPortfolioValues, buyPoints, sellPoints, totalCashValues); // Pass totalCashValues to updateChart
             window.transactionLog = transactionLog;
         }
 
@@ -837,6 +839,7 @@
             const totalPortfolioValues = [];
             const activeProfits = [];
             const ndxPortfolioValues = [];
+            const totalCashValues = []; // Include this to avoid errors during initial setup
 
             const layout = {
                 title: 'Portfolio Values Over Time',
@@ -889,12 +892,13 @@
             ], layout, config);
         }
 
-        function updateChart(totalPortfolioValues, activeProfits, ndxPortfolioValues, buyPoints, sellPoints) {
+        function updateChart(totalPortfolioValues, activeProfits, ndxPortfolioValues, buyPoints, sellPoints, totalCashValues) {
             const allXValues = [
                 ...totalPortfolioValues.map(data => data.x),
                 ...ndxPortfolioValues.map(data => data.x),
                 ...buyPoints.map(point => point.x),
-                ...sellPoints.map(point => point.x)
+                ...sellPoints.map(point => point.x),
+                ...totalCashValues.map(data => data.x) // Include total cash dates
             ];
 
             // Calculate the min and max dates for the x-axis range
@@ -913,6 +917,13 @@
                     y: ndxPortfolioValues.map(data => data.y),
                     name: 'NDX Passive Investment',
                     mode: 'lines',
+                },
+                {
+                    x: totalCashValues.map(data => data.x), // Add total cash to the chart
+                    y: totalCashValues.map(data => data.y),
+                    name: 'Total Cash',
+                    mode: 'lines',
+                    line: { dash: 'dot', color: 'rgba(255, 165, 0, 1)' } // Dashed orange line for cash
                 },
                 // Buy Points
                 {
