Comment font-size for .results section and remove @media rule

--- a/index.html
+++ b/index.html
@@ -164,16 +164,9 @@
         }
 
          .results, .result-item {
-            font-size: 1.6rem !important;
+            /* font-size: 1.6rem !important; */
             margin-bottom: 10px !important;
             display: block;
-        }
-
-        /* Adjust font size for larger screens (or localhost) */
-        @media (min-width: 1200px) {
-            .results, .result-item {
-                font-size: 1.0rem !important;
-            }
         }
         
         .modebar {
